Ensure calendar cells are aligned to top

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -8,6 +8,10 @@
 	padding: 0;
 }
 
+.mc-main td {
+	vertical-align: top;
+}
+
 /* Override overflow:hidden */
 main,div.entry-content,div.site-content, table {
 	overflow: visible !important; 
